improve api
