# models/Employee.js
@@ -7,15 +7,20 @@ const employeeSchema = new Schema({
 		ref: 'Company',
 		required: true,
 	},
+	userId: {
+		type: mongoose.Schema.Types.ObjectId,
+		ref: 'User',
+		required: true,
+	},
 	name: { type: String, required: true },
-	email: { type: String, required: true, unique: true },
-	role: { type: String, required: true },
-	department: { type: String, required: true },
-	salary: { type: Number, required: true },
+	email: { type: String, unique: true },
+	position: { type: String, required: true },
+	department: { type: String },
+	salary: { type: Number,  },
 	status: {
 		type: String,
 		enum: ['active', 'inactive', 'suspended', 'retired'],
-		default: 'in-active',
+		default: 'inactive',
 	},
 	skills: [String],
 	phone: { type: String },
