# routes/generalRoutes.js
@@ -4,6 +4,7 @@ import {
 	getSubscriptionPlans,
 	subscribe,
 	paystackWebhook,
+	verifyPayment,
 } from '../controllers/general.js';
 import { requireAuth } from '../middleware/requireAuth.js';
 
@@ -13,5 +14,6 @@ router.get('/subscription-plans', getSubscriptionPlans);
 router.get('/subscriptions', requireAuth, getSubscription);
 router.post('/subscriptions', requireAuth, subscribe);
 router.post('/paystack-webhook', requireAuth, paystackWebhook);
+router.post('/verify-payment', requireAuth, verifyPayment);
 
 export default router;
